--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,6 @@
       "enabled": true,
       "fileMatch": ["compose.yaml"]
   },
-  "schedule": "daily",
+  "schedule": ["daily"],
   "automerge": false
 }
